cmake_minimum_required(VERSION 3.26)
project(IT3040_Week4)

set(CMAKE_CXX_STANDARD 17)

add_executable(new_target "Bai 4.1.cpp")
add_executable(new_target1 "Bai 4.2.cpp")
add_executable(new_target2 "Bai 4.3.cpp")
add_executable(new_target3 "Bai 4.4.cpp")
add_executable(new_target4 "Bai 4.5.cpp")
add_executable(new_target5 "Bai 4.6.cpp")
add_executable(new_target6 "Bai 4.7.cpp")
add_executable(new_target7 "Bai 4.8 .cpp")
add_executable(new_target8 "Bai 4.9.cpp")
add_executable(new_target9 "Bai 10.cpp")
add_executable(new_target10 "Bai 11.cpp")
add_executable(new_target11 "Bai 12.cpp")
add_executable(new_target12 "Bai 12.cpp")
add_executable(new_target13 "Bai 13.cpp")
